--- a/index.html
+++ b/index.html
@@ -667,6 +667,23 @@
         </div>
       </div>
     </footer>
-    <form></form>
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn">
+          <svg
+            class="modal-close-btn-icon"
+            width="24"
+            height="24"
+            aria-label="modal icon close"
+          >
+            <use
+              href="./images/icons.svg#icon-close"
+              width="8"
+              height="8"
+            ></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
