--- a/index.html
+++ b/index.html
@@ -774,8 +774,9 @@
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="user-privacy-policy"
-              >I accept the terms and conditions of the
+            <label class="review-form-checkbox-label" for="user-privacy-policy">
+              <span class="review-form-own-checkbox"></span>
+              I accept the terms and conditions of the
               <a href="">Privacy Policy</a></label
             >
           </div>
