--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
           </div>
           <div class="review-form-checkbox-wrapper">
             <input
-              class="review-form-checkbox"
+              class="review-form-checkbox visually-hidden"
               id="user-privacy-policy"
               name="user-privacy-policy"
               type="checkbox"
@@ -775,9 +775,18 @@
               required
             />
             <label class="review-form-checkbox-label" for="user-privacy-policy">
-              <span class="review-form-own-checkbox"></span>
+              <span class="review-form-own-checkbox">
+                <svg
+                  class="review-form-own-checkbox-icon"
+                  width="10"
+                  height="8"
+                  aria-label="icon-checkmark"
+                >
+                  <use href="./images/icons.svg#icon-done"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></label
+              <a class="privacy-policy">Privacy Policy</a></label
             >
           </div>
           <button class="review-form-submit-btn" type="submit">Send</button>
