--- a/index.html
+++ b/index.html
@@ -665,9 +665,32 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer">
+          <p class="subscribe">Subscribe</p>
+          <form class="form-subscribe">
+            <label class="form-subscribe-label">
+              <input
+                class="subscribe-footer-input"
+                name="user-email-address"
+                type="email"
+                placeholder="Email"
+                required />
+              <button class="subscribe-btn" type="submit">
+                Subscribe
+                <svg
+                  class="subscribe-btn-icon"
+                  width="24"
+                  height="24"
+                  aria-label="icon send"
+                >
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg></button
+            ></label>
+          </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn">
           <svg
