add subscribe in footer

--- a/index.html
+++ b/index.html
@@ -668,24 +668,27 @@
         <div class="subscribe-footer">
           <p class="subscribe">Subscribe</p>
           <form class="form-subscribe">
-            <label class="form-subscribe-label">
+            <label class="form-subscribe-label" for="user-email-address">
               <input
                 class="subscribe-footer-input"
+                id="user-email-address"
                 name="user-email-address"
                 type="email"
-                placeholder="Email"
-                required />
-              <button class="subscribe-btn" type="submit">
-                Subscribe
-                <svg
-                  class="subscribe-btn-icon"
-                  width="24"
-                  height="24"
-                  aria-label="icon send"
-                >
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg></button
-            ></label>
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg
+                class="subscribe-btn-icon"
+                width="24"
+                height="24"
+                aria-label="icon send"
+              >
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
