--- a/index.html
+++ b/index.html
@@ -693,20 +693,16 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
-        <button class="modal-close-btn">
+        <button class="modal-close-btn" type="button">
           <svg
             class="modal-close-btn-icon"
-            width="24"
-            height="24"
+            width="8"
+            height="8"
             aria-label="modal icon close"
           >
-            <use
-              href="./images/icons.svg#icon-close"
-              width="8"
-              height="8"
-            ></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="review-form-description">
@@ -728,7 +724,7 @@
               <svg
                 class="review-form-input-icon"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="icon user"
               >
                 <use href="./images/icons.svg#icon-user"></use>
@@ -750,7 +746,7 @@
               <svg
                 class="review-form-input-icon"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="icon tel"
               >
                 <use href="./images/icons.svg#icon-tel"></use>
@@ -772,7 +768,7 @@
               <svg
                 class="review-form-input-icon"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="icon email"
               >
                 <use href="./images/icons.svg#icon-email"></use>
@@ -794,13 +790,13 @@
           <div class="review-form-checkbox-wrapper">
             <input
               class="review-form-checkbox visually-hidden"
-              id="user-privacy-policy"
-              name="user-privacy-policy"
+              id="user-privacy"
+              name="user-privacy"
               type="checkbox"
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="user-privacy-policy">
+            <label class="review-form-checkbox-label" for="user-privacy">
               <span class="review-form-own-checkbox">
                 <svg
                   class="review-form-own-checkbox-icon"
